<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">DanceDeets</string>
    <string name="gcm_defaultSenderId" translatable="false">911140565156</string>
    <string name="menu_share">Share…</string>
    <string name="menu_view_map">View on Map</string>
    <string name="menu_view_facebook">View on Facebook</string>
    <string name="action_search">Search</string>
    <string name="menu_add_to_calendar">Add to Calendar</string>
    <string name="retry_button">Retry</string>
    <string name="no_events">No events found.\n\nMaybe we just don\'t have enough dancers signed up in this area. If you invite your friends, we promise to add more events!</string>
    <string name="action_refresh">Refresh Events</string>
    <string name="search_location">Location:</string>
    <string name="search_keywords">Keywords:</string>
    <string name="hint_enter_location">Enter Location</string>
    <string name="hint_enter_keywords">Enter optional keywords</string>
    <string name="cancel">Cancel</string>
    <string name="menu_translate">Translate</string>
    <string name="filter_title_viewevent">DanceDeets Event</string>
    <string name="loading">Loading…</string>
    <string name="facebook_app_id" translatable="false">2347064084</string>
    <string name="login_bubble">Looking to dance? We got the \'deets!\n\nClick Login below, and let\'s check out the world of dance events, both near and far!\n\nAnd of course, we promise not to spam or hack your Facebook account, just help you find and share dance events.</string>
    <string name="login_explain_why_login">Curious why we ask you to login with Facebook?</string>
    <string name="login_use_without_fblogin">Want to use DanceDeets without Facebook login?</string>
    <string name="penguin_name" translatable="false">The DanceDeets Penguin</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Log out</string>
    <string name="action_add_event">Add Event</string>
    <string name="action_feedback">Send Feedback</string>
    <string name="explain_why_login">Why does DanceDeets require Facebook login?\n\nDanceDeets is built on the Facebook platform, and all the DanceDeets events are pulled from Facebook. To find and collect the dance events, DanceDeets depends on dancers signing up with their Facebook accounts and sharing their dance events with DanceDeets. For this reason, the DanceDeets mobile apps use Facebook login.</string>
    <string name="login_use_website">Use www.dancedeets.com</string>
    <string name="use_without_fblogin">Want to use DanceDeets without Facebook login?\n\nThe mobile apps currently require Facebook login to use. However, if you wish to search and view events without logging in, you can use the mobile website available at www.dancedeets.com .</string>
    <string name="login_or">or</string>
    <string name="enter_feedback_here">Enter feedback here:</string>
    <string name="flyer_title">Flyer for %1$s</string>
    <string name="couldnt_detect_location">Could not detect your location. Enter your location here.</string>
    <string name="events_near">Events near %1$s</string>
    <string name="events_near_with_keyword">Events near %1$s with keywords "%2$s"</string>
    <string name="events_with_keyword">Events with keywords "%1$s"</string>
    <string name="tab_upcoming_events">Upcoming Events</string>
    <string name="tab_ongoing_events">Ongoing Events</string>
    <string name="tab_past_events">Past Events</string>
    <string name="banner_ad_unit_id" translatable="false">/26589588/mobile-bottom-banner</string>
    <string name="interstitial_ad_unit_id" translatable="false">/26589588/mobile-interstitial</string>
    <string name="action_share_app">Share DanceDeets…</string>
    <string name="open_event">Open Event</string>
    <string name="action_settings">Settings</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary_on">Active</string>
    <string name="notifications_summary_off">Inactive</string>
    <string name="notification_setup">Notification Setup</string>
    <string name="notifications_sound">Sound</string>
    <string name="notifications_vibrate">Vibrate</string>
    <string name="notifications_upcomingEvents">Event Reminders</string>
    <string name="notifications_eventsAdded">Nearby Events Added</string>
    <string name="notifications_eventsAdded_summary">Notify about new events added nearby</string>
    <string name="notifications_upcomingEvents_summary">Send reminders for RSVPed dance events</string>
    <string name="notifications_vibrate_summary">Vibrate on incoming notifications</string>
    <string name="notifications_sound_summary">Play sound on incoming notifications</string>
    <string name="notification_categories">Notification Categories</string>
    <string name="event_added">New Dance Event</string>
    <string name="see_all_events">See All Events</string>
    <plurals name="n_events">
        <item quantity="one">%1$d event</item>
        <item quantity="other">%1$d events</item>
    </plurals>
</resources>
