...
            android:textSize="20sp"
            android:autoLink="all"
            android:textIsSelectable="true"
            />

        <TextView
            android:id="@+id/location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text=""
...
            android:text="undecided"
            android:textSize="14sp"
            android:clickable="true"
            />

        <TextView
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rsvp"
            android:text=""
            android:textSize="14sp"
            android:autoLink="all"
...
